# metalparsec

./: .gitignore  README.md  cabal.haskell-ci  cabal.project  cabal.project.local  flake.nix  ghc.nix  metalparsec.cabal  shell.nix
.github/workflows/: haskell-ci.yml
bench/: Expr.hs  Javascript.hs  Main.hs  Simple.hs  Util.hs
bench/Expr/: Common.hs  Metalparsec.hs
bench/Javascript/: Attoparsec.hs  Common.hs  Metalparsec.hs  MetalparsecTH.hs
bench/Javascript/Attoparsec/: Extended.hs
bench/Javascript/Metalparsec/: Extended.hs
bench/Javascript/MetalparsecTH/: Util.hs
bench/Simple/: FPStateful.hs  Metalparsec.hs
bench/inputs/: testing.js
cbits/: metalparsec.c
components/bench/: Main.hs  Simple.hs
components/bench/Json/: Attoparsec.hs  Common.hs  Metalparsec.hs
components/bench/Simple/: Attoparsec.hs  FPBasic.hs  Metalparsec.hs
components/lib/Text/: Metalparsec.hs
components/lib/Text/Metalparsec/: Char.hs  Chunk.hs  Util.hs
metalparsec/: metalparsec.cabal
metalparsec-core/: LICENSE  metalparsec-core.cabal
metalparsec-core/cbits/: metalparsec.c
metalparsec-core/src/GHC/Exts/Compat/: Internal.hs
metalparsec-core/src/Text/: Metalparsec.hs
metalparsec-core/src/Text/Metalparsec/: Internal.hs  Prim.hs  Text.hs  Token.hs  Unsafe.hs
metalparsec-core/src/Text/Metalparsec/Internal/: ByteArrayExt.hs  ByteStringExt.hs  C.hs  Chunk.hs  Combinators.hs  MutRec.hs  PureMutableByteArray.hs  SizedCompat.hs  Slice.hs  Text.hs  UnsafePureMutableByteArray.hs  Utf8.hs  Util.hs
metalparsec-core/src/Text/Metalparsec/Internal/Compat/: Int.hs  Word.hs
metalparsec-core/src/Text/Metalparsec/Prim/: Internal.hs
metalparsec-core/src/Text/Metalparsec/Text/: Unsafe.hs
metalparsec-core/test/: Main.hs  Properties.hs  Sexp.hs  Util.hs
metalparsec-stream/: metalparsec-stream.cabal
metalparsec-stream/src/Text/Metalparsec/: Stream.hs
metalparsec-th/: metalparsec-th.cabal
metalparsec-th/src/Text/Metalparsec/: TH.hs
metalparsec/bench/: Expr.hs  Javascript.hs  Main.hs  Simple.hs  Util.hs
metalparsec/bench/Expr/: Attoparsec.hs  Common.hs  Flatparse.hs  Metalparsec.hs
metalparsec/bench/Javascript/: Attoparsec.hs  Metalparsec.hs  MetalparsecTH.hs
metalparsec/bench/Javascript/Attoparsec/: Extended.hs
metalparsec/bench/Javascript/Metalparsec/: Extended.hs
metalparsec/bench/Json/: Metalparsec.hs
metalparsec/bench/Simple/: Megaparsec.hs  Metalparsec.hs  MetalparsecTH.hs
metalparsec/bench/inputs/: fibonacci.js  gen-example.py
src/Compat/: Int.hs  Word.hs
src/GHC/Exts/: Compat.hs
src/GHC/Exts/Compat/: Internal.hs
src/Text/: Metalparsec.hs
src/Text/Metalparsec/: Char.hs  Chunk.hs  Combinators.hs  IntState.hs  Internal.hs  Parser.hs  PrimOps.hs  PureMutableByteArray.hs  TH.hs  Token.hs  UnboxedNumerics.hs  Utf8.hs  Util.hs
src/Text/Metalparsec/Internal/: ByteArrayExt.hs  C.hs  Chunk.hs  Combinators.hs  PureMutableByteArray.hs  Text.hs  UnboxedNumerics.hs  Utf8.hs  Util.hs
src/Text/Metalparsec/Text/: Unsafe.hs
test/: Sexp.hs
unstreams/: unstreams.cabal
unstreams/src/Data/Stream/Monadic/: Unstreams.hs
